import { Player } from './Player.mjs';

export class MachinePlayer extends Player {
    constructor(indexColor, board) {
        super(indexColor, board);
    }

    accept(visitor){}
    
    setColumn(){}

}