export class ConsoleView {
    
    writeln(text){}

    readString(question){}

    readNumber(question){}
}    